<?xml version="1.0" encoding="utf-8" ?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/purplebtn"
    tools:context=".ProfileActivity" >

    <LinearLayout android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dark_bule">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/profile_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/menu" />

    </LinearLayout>

    <LinearLayout android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_purple">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/size_profile"
            android:layout_height="@dimen/size_profile"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/profile_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@color/dark_purple">

            <TextView
                android:id="@+id/id_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/id_user"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/username_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/username"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/email_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/email"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/phone_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:text="@string/phone"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="@dimen/btn_edit"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/edit_profile"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>