<?xml version="1.0" encoding="utf-8" ?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/purplebtn"
    tools:context=".EditProfileActivity" >

    <LinearLayout android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dark_bule">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/profile_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />


        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/menu" />

    </LinearLayout>

    <LinearLayout android:id="@+id/layout_edit2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_purple">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/size_profile"
            android:layout_height="@dimen/size_profile"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/profile_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@color/dark_purple">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/edit_visa"
                android:layout_width="@dimen/btn_edit"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/visa_card"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/edit_cvv"
                android:layout_width="@dimen/cvv"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/cvv"
                android:inputType="numberPassword"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout android:id="@+id/layout_btn_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="@dimen/btn_save"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/save"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/button_cancle"
                    android:layout_width="@dimen/btn_save"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/cancel"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </LinearLayout>

            <LinearLayout android:id="@+id/layout_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_text_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/text_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_delete"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/edit_text"
                        android:layout_width="@dimen/btn_save"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_border"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/delete"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="26dp">
                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="@dimen/btn_save"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:backgroundTint="@color/red"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>