<?xml version="1.0" encoding="utf-8" ?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ProfileActivity" >

    <LinearLayout android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_menu"
        android:orientation="horizontal"
        android:background="@color/dark_bule">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="true"
                app:srcCompat="@drawable/arrow_left"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <TextView
            android:id="@+id/profile_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="25dp"
            android:textSize="@dimen/size_text"
            android:text="@string/profile"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp">
            <ImageView
                android:id="@+id/menu"
                android:layout_width="@dimen/icon_menu"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/three_icon" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/layout_information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_purple">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            app:srcCompat="@drawable/profile_image" />

        <TextView
            android:id="@+id/id_user"
            android:layout_width="@dimen/channel"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:padding="10dp"
            android:text="@string/id_user"
            android:gravity="left"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/username_user"
            android:layout_width="@dimen/channel"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:text="Username : "
            android:gravity="left"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/button_edit_profile"
            android:layout_width="@dimen/channel"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/edit_profile"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:padding="10dp"
            />

    </LinearLayout>

</LinearLayout>